findGeoIntersectionsHelper